# pattern-recognition

./: main.py  pyproject.toml
data/raw/: feature-explanations.xlsx  price-and-sales-data.csv
notebooks/: 01 Excercise 1.ipynb
