[project]
name = "pattern-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
